Update 'backend-tests-go-edczairn' component image to: quay.io/rhtap_qe/backend-tests-go-edczairn:af5ef8a23de9739ace907e067f3a970308a7eb19@sha256:1f90c33a4af728d1f94706b2b1a0abd00828297bd5a02270952a1a42c19f016f

--- a/components/backend-tests-go-edczairn/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-edczairn/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-edczairn
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-edczairn:af5ef8a23de9739ace907e067f3a970308a7eb19@sha256:1f90c33a4af728d1f94706b2b1a0abd00828297bd5a02270952a1a42c19f016f
+          name: container-image
